--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,6 @@ Werkzeug
 python-dotenv
 apify-client
 sentence-transformers # Se você usa RAG com o all-MiniLM-L6-v2
-gradio_client
+gradio_client>=1.0.0
 edge-tts
 replicate
